# kache

./: .gitignore  Cargo.toml  Justfile  README.md  docker-bake.hcl
.github/workflows/: ci.yml  service-image.yml
charts/kache-service/: values.yaml
crates/kache-core/: Cargo.toml
crates/kache-e2e/: Cargo.toml
crates/kache-e2e/src/: assertions.rs  fixture.rs  lib.rs  report.rs  result.rs  runner.rs
crates/kache-service/: Cargo.toml
crates/kache-service/src/: state.rs
docs/: plan.md
docs/getting-started/: installation.mdx
docs/kache-docs/: monitor.mdx
docs/kache-docs/commands/: reference.mdx
src/: args.rs  cache_key.rs  cli.rs  compile.rs  daemon.rs  events.rs  link.rs  main.rs  path_normalizer.rs  report.rs  service.rs  store.rs  tui.rs  wrapper.rs
src/compiler/: cc.rs  mod.rs  platform.rs  rustc.rs
test-projects/c-hello/: Makefile  kache-fixture.toml
test-projects/c-hello/src/: bar.h  foo.c
test-projects/cpp-hello/: Makefile  kache-fixture.toml
test-projects/cpp-hello/src/: bar.hpp  foo.cpp
test-projects/hello-world/: Cargo.toml
test-projects/multi-dep/: Cargo.toml  kache-fixture.toml
test-projects/out-dir-runtime/: Cargo.toml  build.rs  kache-fixture.toml
test-projects/out-dir-runtime/src/: main.rs
test-projects/rust-c-ffi/: Cargo.toml  build.rs  kache-fixture.toml
test-projects/rust-c-ffi/csrc/: adder.c
test-projects/rust-c-ffi/src/: main.rs
test-projects/rust-check/: Cargo.toml  kache-fixture.toml
test-projects/rust-check/src/: lib.rs
test-projects/rust-debug/: Cargo.toml  kache-fixture.toml
test-projects/rust-debug/src/: main.rs
test-projects/rust-workspace/: Cargo.toml  kache-fixture.toml
test-projects/rust-workspace/app/: Cargo.toml
test-projects/rust-workspace/app/src/: main.rs
test-projects/rust-workspace/pm/: Cargo.toml
test-projects/rust-workspace/pm/src/: lib.rs
test-projects/stale-check/: Cargo.toml
