[package]
name = "kache"
version = "0.3.1"
edition = "2024"
description = "Zero-copy, content-addressed Rust build cache. No copies, no wasted disk — just hardlinks locally and S3 for sharing."
license = "Apache-2.0"
repository = "https://github.com/kunobi-ninja/kache"
homepage = "https://kunobi.ninja/docs/kache"
keywords = ["build-cache", "rustc-wrapper", "blake3", "cargo"]
categories = ["development-tools::build-utils", "caching"]
rust-version = "1.95"

[workspace]
members = ["crates/kache-core", "crates/kache-e2e", "crates/kache-service"]
# test-projects/* are not listed: each declares its own empty
# `[workspace]` so cargo treats them as standalone, which is what the
# e2e harness (and the integration tests) need to drive them as
# realistic standalone consumers of kache.
resolver = "3"

[dependencies]
blake3 = "1"
aws-sdk-s3 = "1"
aws-config = "1"
aws-smithy-http-client = { version = "1", features = ["rustls-aws-lc"] }
kache-core = { path = "crates/kache-core", default-features = false, features = ["planning"] }
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-util", "net", "time", "signal", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.39", features = ["bundled"] }
ratatui = "0.30"
crossterm = "0.29"
filetime = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
zstd = "0.13"
bytesize = "2"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
tar = "0.4"
futures = "0.3"
glob = "0.3"
libc = "0.2"
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
interprocess = { version = "2.4.2", features = ["tokio"] }
unicode-normalization = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
pkg-fmt = "tgz"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"

[lints.rust]
warnings = "deny"

[lints.clippy]
permissions_set_readonly_false = "allow"
too_many_arguments = "allow"
