[package]
name = "kache-core"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kunobi-ninja/kache"
rust-version = "1.95"

[features]
default = ["planning"]
planning = ["dep:anyhow", "dep:async-trait"]

[dependencies]
anyhow = { version = "1", optional = true }
async-trait = { version = "0.1", optional = true }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
