[package]
name = "kache-e2e"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/kunobi-ninja/kache"
rust-version = "1.95"
publish = false
description = "End-to-end test harness for kache: drives example projects through cold/warm/noop and asserts against kache's own JSON report."

[[bin]]
name = "kache-e2e"
path = "src/bin/kache-e2e.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "1"

[lints.rust]
warnings = "deny"
