[package]
name = "rust-debug"
version = "0.1.0"
edition = "2021"

# Empty `[workspace]` keeps cargo from walking upward into the kache
# repo's own workspace — see multi-dep for the full rationale.
[workspace]

[dependencies]
# A tiny, zero-transitive-dep crate: enough to exercise caching a
# real dependency's debug `.rlib` / `.rmeta` / `.d` without a slow
# build graph.
itoa = "1"
